--- a/TPN5/cronometro/estilo.css
+++ b/TPN5/cronometro/estilo.css
@@ -1,33 +1,24 @@
-body {
-    text-align: center;
+.cronometro {
+    position: relative;
+    width: 60%;
+    background-color: #3c98ff;
+    left: -5%;
+    padding: 1em 0;
+    font-family: "Roboto Mono", monospace;
+    color: #0a0a0a;
+    font-size: 2.5em;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 0.3em;
+    box-shadow: 0 0.5em 1em rgba(1, 87, 185, 0.2);
+    align-items: center;
   }
-  
-  h1 {
-    color: #333;
-    font-family: Arial, sans-serif;
+  main{
+    align-items: center;
+    
   }
-  
-  input {
-    padding: 5px;
-    font-size: 16px;
-  }
-  
-  button {
-    padding: 8px 12px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  #mensaje {
-    color: #333;
-    font-family: Arial, sans-serif;
-    font-size: 18px;
-    margin-top: 20px;
-  }
-  
+
   .button {
     background: #FBCA1F;
     font-family: inherit;
